Attempt at a port to SQLAlchemy 2.0 + psycopg (v3)
mypy.sh runs cleanly
only cursory testing (queue_feeds.py and worker.py)
requires DATABASE_URL="postgresql+psycopg:....."

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,10 +1,7 @@
 # see mypy.sh
 
 [mypy]
-mypy_path = stubs
-
-# https://github.com/dropbox/sqlalchemy-stubs
-plugins = sqlmypy
+plugins = sqlalchemy.ext.mypy.plugin
 
 # from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
 disallow_untyped_defs = True
