split dokku-scripts/config.sh from dokku-scripts/instance.sh
save instance.sh git hash in a dokku config variable; check before push

--- a/dokku-scripts/install-dokku.conf
+++ b/dokku-scripts/install-dokku.conf
@@ -95,10 +95,23 @@ if [ x$(whoami) != xroot ]; then
 fi
 
 ################
+
+# Generated docker container names are dokku.{postgres,redis}.APP
+# so no need for more specifics in service names.
+app_to_db_svc() {
+    echo $1
+}
+
+################
+
+git_hash() {
+    # XXX use custom format to avoid need for awk?
+    git log -n1 --oneline --no-abbrev-commit $1 | awk '{ print $1 }'
+}
+
+################
 LOCAL_CONF=$SCRIPT_DIR/local-dokku.conf
 if [ -f $LOCAL_CONF ]; then
     echo reading $LOCAL_CONF
     . $LOCAL_CONF
-else
-    echo will read $SCRIPT_DIR/local-dokku.conf if created
 fi
