--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ setproctitle==1.3.*
 PyYAML==6.0.*
 mediacloud==4.0.*, != 4.0.0
 sitemap-tools @ git+https://github.com/mediacloud/sitemap-tools@v1.1.0
+mc-manage @ git+https://github.com/mediacloud/mc-manage@v1.1.4
