--- a/requirements.txt
+++ b/requirements.txt
@@ -18,19 +18,19 @@ beautifulsoup4==4.12.3
     #   newspaper3k
 boilerpy3==1.0.7
     # via mediacloud-metadata
-certifi==2025.1.31
+certifi==2025.7.14
     # via
     #   requests
     #   sentry-sdk
     #   trafilatura
 chardet==5.2.0
     # via readability-lxml
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
     # via
     #   htmldate
     #   requests
     #   trafilatura
-click==8.1.8
+click==8.2.1
     # via
     #   nltk
     #   uvicorn
@@ -41,11 +41,11 @@ cssselect==1.3.0
     #   goose3
     #   newspaper3k
     #   readability-lxml
-dateparser==1.2.1
+dateparser==1.2.2
     # via
     #   htmldate
     #   mediacloud-metadata
-exceptiongroup==1.2.2
+exceptiongroup==1.3.0
     # via anyio
 fastapi==0.79.1
     # via
@@ -65,9 +65,9 @@ furl==2.1.4
     # via mediacloud-metadata
 goose3==3.1.19
     # via mediacloud-metadata
-greenlet==3.2.0
+greenlet==3.2.3
     # via sqlalchemy
-h11==0.14.0
+h11==0.16.0
     # via uvicorn
 htmldate==1.8.1
     # via
@@ -84,7 +84,7 @@ jieba3k==0.35.1
     # via newspaper3k
 jinja2==3.1.6
     # via rss-fetcher (pyproject.toml)
-joblib==1.4.2
+joblib==1.5.1
     # via nltk
 justext==3.0.2
     # via trafilatura
@@ -95,9 +95,12 @@ lxml==5.1.1
     #   goose3
     #   htmldate
     #   justext
+    #   lxml-html-clean
     #   newspaper3k
     #   readability-lxml
     #   trafilatura
+lxml-html-clean==0.4.2
+    # via readability-lxml
 mako==1.3.10
     # via alembic
 markupsafe==3.0.2
@@ -116,11 +119,11 @@ newspaper3k==0.2.8
     # via mediacloud-metadata
 nltk==3.9.1
     # via newspaper3k
-numpy==2.2.5
+numpy==2.2.6
     # via py3langid
 orderedmultidict==1.0.1
     # via furl
-pillow==11.2.1
+pillow==11.3.0
     # via
     #   goose3
     #   newspaper3k
@@ -128,11 +131,11 @@ psycopg==3.1.20
     # via rss-fetcher (pyproject.toml)
 py3langid==0.2.2
     # via mediacloud-metadata
-pyahocorasick==2.1.0
+pyahocorasick==2.2.0
     # via goose3
 pyairtable==2.3.7
     # via mc-manage
-pydantic==1.10.21
+pydantic==1.10.22
     # via
     #   fastapi
     #   pyairtable
@@ -143,7 +146,7 @@ python-dateutil==2.8.2
     #   htmldate
     #   newspaper3k
     #   rss-fetcher (pyproject.toml)
-python-dotenv==0.20.0
+python-dotenv==1.0.1
     # via rss-fetcher (pyproject.toml)
 pytz==2025.2
     # via dateparser
@@ -151,13 +154,13 @@ pyyaml==6.0.2
     # via
     #   newspaper3k
     #   rss-fetcher (pyproject.toml)
-readability-lxml==0.8.1
+readability-lxml==0.8.4.1
     # via mediacloud-metadata
-regex==2024.11.6
+regex==2025.7.31
     # via
     #   dateparser
     #   nltk
-requests==2.32.3
+requests==2.32.4
     # via
     #   feedfinder2
     #   goose3
@@ -173,7 +176,7 @@ requests-file==2.1.0
     # via tldextract
 sentry-sdk==1.10.1
     # via rss-fetcher (pyproject.toml)
-setproctitle==1.3.5
+setproctitle==1.3.6
     # via rss-fetcher (pyproject.toml)
 sgmllib3k==1.0.0
     # via feedparser
@@ -192,7 +195,7 @@ sniffio==1.3.1
     # via anyio
 soupsieve==2.7
     # via beautifulsoup4
-sqlalchemy==2.0.40
+sqlalchemy==2.0.42
     # via
     #   alembic
     #   rss-fetcher (pyproject.toml)
@@ -204,7 +207,7 @@ surt==0.3.1
     # via mediacloud-metadata
 tinysegmenter==0.3
     # via newspaper3k
-tld==0.13
+tld==0.13.1
     # via courlan
 tldextract==5.1.3
     # via
@@ -217,9 +220,10 @@ tqdm==4.67.1
     # via nltk
 trafilatura==1.8.1
     # via mediacloud-metadata
-typing-extensions==4.13.2
+typing-extensions==4.14.1
     # via
     #   anyio
+    #   exceptiongroup
     #   psycopg
     #   pyairtable
     #   pydantic
@@ -228,7 +232,7 @@ tzlocal==5.3.1
     # via dateparser
 url-normalize==1.4.3
     # via mediacloud-metadata
-urllib3==2.4.0
+urllib3==2.5.0
     # via
     #   courlan
     #   htmldate
